--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -141,21 +141,17 @@ section h1:before{
     height:580px ;
     display: flex;
    flex-direction: column;
+  /* border:1px solid rgb(226, 0, 0);*/
 }
 
 .home .home-container{
     height:350px;
-    width: 100%;
-    max-width: 1200px; /* Limite la largeur */
+    width: 100%; /* Limite la largeur */
     display: flex;
     align-items: center;
+    /*border: 1px solid yellow;*/
 }
 
-.home-container .salut{ 
-font-size: 10rem;
-font-weight:var(--font-weight);
-}
-    
 
 .home .titre-portfolio{
     margin-top: 8rem;
@@ -167,18 +163,16 @@ font-weight:var(--font-weight);
 } 
 
 .paragraphe1{
-   margin-left:8rem;
-   margin-top: 2rem;
-    font-size:3.4rem;
-    width: 80%;
+    font-size:3.7rem;
     color:rgb(4, 4, 4); 
+    /*border: 1px solid black;*/
     z-index: 4;
-    font-weight: 500;
+    font-weight: 200;
     position:relative; 
     padding: 0 2rem;
 }
 
-.paragraphe1::after{
+/*.paragraphe1::after{
     content:"";
     position:absolute; 
     top: 0rem;
@@ -201,25 +195,25 @@ font-weight:var(--font-weight);
     width: 20px;
     height: 20px;
 
-}
+}*/
 
 .home .link-contact{
-margin-top: 32rem;
-margin-left: -14rem;
-width: 13%;
+position: absolute;
+left: 4rem;
+top: 27rem;
+width: 15%;
 display: inline-flex;
 border: 1px solid rgb(0, 0, 0); 
-padding:1rem;
+padding:1.2rem;
 display: flex;
 justify-content: center;
 align-items: center;
-left: 54rem;
-border-radius: 10px;
+border-radius: 8px;
 }
 
 
 .home ul li{
-    position: absolute;
+  position: absolute;
   list-style:none; 
 }
 
@@ -309,12 +303,12 @@ margin-left: 30rem;
     margin-top:6rem; 
     color:rgb(0, 0, 0); 
     font-size: 1.4rem; 
-    font-weight: 500;
+    font-weight: 200;
     padding-top: 1rem;
 }
 .paragraphe .competence{
 
-    color: rgb(0, 0, 0);
+    color: rgba(0, 0, 0, 0.297);
     border-bottom: 0.5px solid rgb(0, 0, 0);
     padding-bottom: 1rem;
 }
@@ -423,7 +417,7 @@ border-radius: 10px;
 .contact-mini p{
   color:rgb(255, 255, 255);
   width: 35%;
-  font-weight: var(--font-weight);
+  font-weight: 200;
   font-size: 1.5rem;
   margin-top: 1rem;
   margin-left: -3rem;
